# share_screen

./: .clang-format  .gitignore  LICENSE  README.md  version.txt
android/: .gitignore  1.jks  settings.gradle
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/llc/share_screen/: BackThread.java  Config.java  Error.java  Frame.java  FrontThread.java  MainActivity.java  MainService.java  NetThread.java
android/app/src/main/java/ss/: Config.java  EncodeThread.java  Frame.java  MainActivity.java  MainService.java  MainThread.java  NetThread.java  SessionThread.java
android/app/src/main/res/drawable/: ss_launcher_foreground.xml
android/app/src/main/res/drawable-anydpi/: ss_notify.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: ss_launcher.xml
android/app/src/main/res/values/: colors.xml  ss_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
doc/: ffmpeg.md
pc/: .gitignore  CMakeLists.txt  xm.natvis
pc/3rd/glad/: gl.h  glx.h  wgl.h
pc/cmake/: copy.cmake  ffmpeg_target.cmake
pc/src/ss/: BlockingQueue.hpp  Common.hpp  DecodeThread.cpp  DecodeThread.hpp  GlRender.cpp  GlRender.hpp  Main.cpp  MainThread.cpp  MainThread.hpp  NetThread.cpp  NetThread.hpp  Pch.hpp  PtsThread.cpp  PtsThread.hpp  _resource.h  _ss.rc
pc/src/ss/main_thread_impl/: Linux.cpp  Linux.hpp  MacOs.hpp  MacOs.mm  Windows.cpp  Windows.hpp
pc/src/xm/: Array.hpp  NonCopyable.hpp  OtherTool.hpp  PlatformDefine.hpp  SingletonBase.hpp  StringStream.hpp
pc/unit_test/: Array_test.cpp  Common.hpp  StringStream_test.cpp
resource/: 1.icns  create_desktop.sh  magick_commands.txt  run.bat  run.sh
win/: .gitignore  CMakeLists.txt
win/src/llc/share_screen/: BackThread.cpp  BackThread.hpp  DecodeThread.cpp  DecodeThread.hpp  FrontThread.cpp  FrontThread.hpp  PtsThread.cpp  PtsThread.hpp  Render.cpp  Render.hpp  common.hpp  main.cpp  pch.hpp
win/src/llc/util/: BlockingQueue.hpp  NonCopyable.hpp  Singleton.hpp  StringStream.hpp  StringView.hpp
